Message box fix when more text than height, introduced scrollbar and margin bottom

--- a/src/page/styles.css
+++ b/src/page/styles.css
@@ -2,10 +2,13 @@
 .messageBox {
   width: 90vw;
   max-width: 500px;
-  margin: 20vh auto;
+  margin: 10vh auto;
   background-color: #272B30;
   padding: 10px 30px;
   color: #f5f5f5;
+  height: 90vh;
+  max-height: 80vh;
+  overflow-y: scroll;
 }
 
 pre {
